--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
 language: node_js
 node_js:
   - 0.12
+before_script:
+  - npm install
+
+  - npm run bower-install
+
+  - npm run make-globalize-cldr-data-js
+script: npm run test
