Add minified file / made build faster by sudo false

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: node_js
+
 node_js:
   - 0.12
+
+sudo: false
+
 before_script:
   - npm install
 
   - npm run bower-install
 
   - npm run make-globalize-cldr-data-js
+
 script: npm run test
